# classyconf

./: .coveragerc  .coverrals.yml  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tbump.toml
.ci/: deps.osx.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
classyconf/: __init__.py  casts.py  configuration.py  exceptions.py  loaders.py  parsers.py
docs/source/: advanced.rst  casts.rst  changelog.rst  conf.py  faq.rst  index.rst  installation.rst  introduction.rst  loaders.rst  usage.rst
tests/: conftest.py  factory.py  test_casts.py  test_cfgfile.py  test_commandline.py  test_config.py  test_dict.py  test_envfile.py  test_envvar.py  test_filediscover.py
