[tool.poetry]
name = "classyconf"
version = "0.4.0"
description = ""
authors = ["Hernan Lozano <hernantz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-runner = "^5.3.1"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
twine = "^3.4.1"
black = "^21.6b0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-runner = "^5.3.1"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
