[tool.poetry]
name = "classyconf"
version = "0.5.0"
description = "Extensible library for separation of settings from code."
authors = ["Hernan Lozano <hernantz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-runner = "^5.3.1"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
black = "^21.6b0"
twine = "^3.4.1"
tbump = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
