[metadata]
name = classyconf
description = Extensible library for separation of settings from code.
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Hernan Lozano
author_email = hernantz@gmail.com
url = https://github.com/hernantz/classyconf
project_urls =
    Documentation = https://classyconf.readthedocs.io/en/latest/
    Source = https://github.com/hernantz/classyconf
    Tracker = https://github.com/hernantz/classyconf/issues
license = MIT
license_file = LICENSE.txt
test_suite = tests
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries

[options]
packages = find:
platforms = any
include_package_data = True

[wheel]
universal = 1
